--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 .testimonails > .container {
   max-width: 80%;
-  margin: 8rem auto;
+  margin: 11.5rem auto;
 }
 .testimonails_wrapper {
   display: grid;
@@ -38,6 +38,7 @@ body {
   border-radius: 0.5rem;
   padding: 2rem;
   color: var(--light-grayish-blue);
+  box-shadow: 10px 20px 16px hsl(217, 19%, 35%, 0.15);
 }
 .testimonails_wrapper > .testimonail_wrapper:nth-of-type(1),
 .testimonails_wrapper > .testimonail_wrapper:nth-of-type(4) {
@@ -66,6 +67,7 @@ body {
   display: grid;
   grid-template-columns: 50px auto;
   font-size: 0.8rem;
+  margin-bottom: 0.3em;
 }
 .user_name {
   margin: 0px 0px 0.1rem;
@@ -77,6 +79,10 @@ body {
   border-radius: 50%;
   width: 36px;
   height: 36px;
+}
+.testimonial__header {
+  margin-bottom: 1.4em;
+  font-size: 1.3rem;
 }
 .testimonail_wrapper q {
   opacity: 70%;
