--- a/testimonials-grid-react/src/app.css
+++ b/testimonials-grid-react/src/app.css
@@ -76,7 +76,7 @@ body {
   opacity: 50%;
 }
 .profile_pic {
-  border-radius: 50%;
+  border-radius: 0.5;
   width: 36px;
   height: 36px;
 }
@@ -85,7 +85,7 @@ body {
   font-size: 1.3rem;
 }
 .testimonail_wrapper q {
-  opacity: 70%;
+  opacity: 0.7;
   font-size: 0.8rem;
   line-height: 1.2em;
 }
